--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jobinsjp/vue3-datatable": "^1.0.15",
     "@kyvg/vue3-notification": "^3.0.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -17,6 +18,7 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-toast-notification": "3.0",
+    "vue3-table-lite": "^1.3.9",
     "vue3-toastify": "^0.1.14"
   },
   "devDependencies": {
