--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-good-table-next": "^0.2.1",
     "vue-router": "^4.2.5",
     "vue-toast-notification": "3.0",
     "vue3-table-lite": "^1.3.9",
