--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-good-table-next": "^0.2.1",
     "vue-router": "^4.2.5",
     "vue-toast-notification": "3.0",
@@ -27,6 +28,7 @@
     "vue3-toastify": "^0.1.14"
   },
   "devDependencies": {
+    "@types/node": "^20.8.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
