--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,10 @@
     "noFallthroughCasesInSwitch": true,
 
     "types": [
-      "vue3-toastify/global"
-    ]
+      "vue3-toastify/global",
+    ],
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "useUnknownInCatchVariables": false
 }
